[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyARB"
version = "1.2.0"
authors = [
  { name="Koratun", email="danmitch@uat.edu" },
]
description = "A localization library for python utilizing Google's ARB format for Flutter"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
pyarb = "pyARB.__main__:main"

[project.urls]
"Homepage" = "https://github.com/Koratun/pyARB"
"Bug Tracker" = "https://github.com/Koratun/pyARB/issues"